--- a/Work_planning.html
+++ b/Work_planning.html
@@ -328,8 +328,8 @@
                 	</div>
                 	
                 	<div style="float:left;padding: 30px 0px 5px 15px;">
-                		<button type="button" class="btn btn-info" title="Add New Job">
-                			<span class="glyphicon glyphicon-plus-sign"></span> Add New Job
+                		<button type="button" class="btn btn-info" title="Gantt Chart">
+                			<span class="glyphicon glyphicon-th-list"></span><a href="gantt.html" style="text-decoration: none; color: inherit;"> Gantt Chart</a>
                 		</button>
                 	</div>
 				</div>
